# agent-ctx

./: .gitignore  BLOG-plan.md  BLOG.md  README.md  analyze_agents.py  main.py  models.json  pyproject.toml
analysis_output/: accuracy_analysis.csv  agent_comparison.csv  detailed_metrics.csv  field_accuracy_summary.csv  summary_report.md  token_growth_regression.csv
data/: route_matrix.csv  temporal_analysis.csv  yellow_tripdata_2025-01.parquet  yellow_tripdata_2025-02.parquet  yellow_tripdata_2025-03.parquet  yellow_tripdata_2025-04.parquet  yellow_tripdata_2025-05.parquet  yellow_tripdata_2025-06.parquet  yellow_tripdata_2025-07.parquet  yellow_tripdata_2025-08.parquet  zone_rankings.csv
outputs/20251107T022424/: google-gemini-2.5-pro-intent.json  google-gemini-2.5-pro-simple-raw.json  google-gemini-2.5-pro-simple-summarization.json
outputs/20251107T024315/: anthropic-claude-sonnet-4.5-intent.json  anthropic-claude-sonnet-4.5-simple-raw.json  anthropic-claude-sonnet-4.5-simple-summarization.json
outputs/20251107T091039/: openai-gpt-4.1-mini-intent.json  openai-gpt-4.1-mini-simple-raw.json  openai-gpt-4.1-mini-simple-summarization.json
outputs/20251107T124839/: openai-gpt-5-intent.json  openai-gpt-5-simple-raw.json  openai-gpt-5-simple-summarization.json
outputs/20251107T141211/: openai-gpt-4.1-intent.json  openai-gpt-4.1-simple-raw.json  openai-gpt-4.1-simple-summarization.json
outputs/20251107T141810/: openai-gpt-4.1-intent.json  openai-gpt-4.1-simple-raw.json  openai-gpt-4.1-simple-summarization.json
src/: cost.py  llm.py  models.py  tools.py
(+32 files in other folders)
