[project]
name = "agent-ctx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.1",
    "html-to-markdown>=2.5.6",
    "httpx>=0.28.1",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sqlglot[rs]>=27.29.0",
]
